# pencarian-surat

./: README.md
faiz ata/: LICENSE  README.md  setup.cfg
faiz ata/src/pencarian surat/: alquran.py
faiz ata/src/pencarian_surat.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
