[metadata]
name = pencarian_surat
version = 0.1.1
author = faiz ata
author_email = faizata777@gmail.com
description = Library ini digunakan hanya untuk kesenangan semata tidak untuk sesuatu yang serius.
long_description = file: README.md
long_description_content_type = text/markdown
url = 
project_urls =
    Bug Tracker = 
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src